Mon Mar 31 17:06:25 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* quantities.scm: Update kawa.math -> gnu.math various places.

Tue Mar 25 15:35:36 1997  Per Bothner  <bothner@kalessin.cygnus.com>

	* when_unless.scm -> syntax.scm:  Rename.
	Add gentemp and defmacro.
	* Makefile.am:  Update.

Tue Mar 18 14:05:13 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* keywords.scm (keyword->string):  Primitive is virtual, not static.

Mon Mar 17 21:35:10 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* keywords.scm, port.scm, strings.scm:  New files.
	* reflection.scm:  New file - uses JDK 1.1 java.lang.reflect.Field.
	* quantities.scm, std_syntax.scm:  Use #!void.
	* thread.scm:  Add exit.
	* Makefile.am, Makefile.in:  Update for new functions.

Sat Mar  8 11:18:51 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* quantities.scm:  New file.  Define define-unit.
	* Makefile.{am,in}:  Update.

Mon Feb  3 17:36:41 1997  Per Bothner  <bothner@kalessin.cygnus.com>

	* characters.scm, vectors.scm:  New files.
	* Makefile.am: Upadte.  Use new $KAWA.

Mon Jan 20 16:45:20 1997  Per Bothner  <bothner@kalessin.cygnus.com>

	* std_syntax.scm (do):  Handle sequence of exit commands.
	* thread.scm:  new file, defines future syntax.
	* Makefile.am, Makefile.in:  Add thread.class.

Mon Jan  6 23:43:50 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* std_syntax.scm (cond):  Fix typo .... -> ... .
	Reported by Harold Carr <carr@Eng.Sun.COM>.

Fri Dec 13 17:02:37 1996  Per Bothner  <bothner@deneb.cygnus.com>

	* Makefile.{am.in} (JAVA):  Separate out new JAVAFLAGS macro.

Tue Oct 22 23:20:40 1996  Per Bothner  <bothner@deneb.cygnus.com>

	* {case,cond,delay,let}.scm:  Removed, merged to std_syntax.
	* std_syntax.scm:  New file, contains old macros and let*.
	* Makefile.{am,in}:  Update accordingly.

Sun Sep  8 21:04:30 1996  Per Bothner  <bothner@deneb.cygnus.com>

	* case.scm, cond.scm, delay.scm, let.scm:  New macros.
	* Makefile.{am,in}:  Add new classes.